--- a/css/shoplist.css
+++ b/css/shoplist.css
@@ -1,3 +1,93 @@
+body {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
 
+.shoplist-main-container {
+  width: 50%;
+  height: 500px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border: solid 1px grey;
+}
+.shoplist-main-container .shoplist-input-container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  position: relative;
+}
+.shoplist-main-container .shoplist-input-container .shoplist-entry-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.shoplist-main-container .shoplist-input-container .shoplist-entry-container input,
+.shoplist-main-container .shoplist-input-container .shoplist-entry-container button {
+  height: 40px;
+  margin: 0;
+}
+.shoplist-main-container .shoplist-input-container .shoplist-entry-container input {
+  width: 70%;
+}
+.shoplist-main-container .shoplist-input-container .shoplist-entry-container button {
+  width: 20%;
+  margin-left: 5px;
+}
+.shoplist-main-container .shoplist-list-container {
+  width: 90%;
+  margin-bottom: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.shoplist-main-container .shoplist-list-container .shoplist-col-titles {
+  display: flex;
+  width: 90%;
+}
+.shoplist-main-container .shoplist-list-container .shoplist-col-titles .hdr-item {
+  width: 60%;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+.shoplist-main-container .shoplist-list-container .shoplist-col-titles .hdr-qty {
+  width: 20%;
+  text-align: center;
+}
+.shoplist-main-container .shoplist-list-container .list-item {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  height: 55px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  border: solid 1px grey;
+  border-radius: 5px;
+  margin: 5px 0;
+}
+.shoplist-main-container .shoplist-list-container .list-item h2 {
+  width: 60%;
+}
+.shoplist-main-container .shoplist-list-container .list-item .item-counter-component {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.shoplist-main-container .shoplist-list-container .list-item .trash {
+  width: 20%;
+  text-align: center;
+}
+.shoplist-main-container .shoplist-list-container .list-item .trash:hover,
+.shoplist-main-container .shoplist-list-container .list-item .add:hover,
+.shoplist-main-container .shoplist-list-container .list-item .sub:hover {
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=shoplist.css.map */
